feat: add GitHub browser login
